# gnome-builder

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  README.md  TODO.md  autogen.sh  builder-menu.ui  configure.ac  gnome-builder-1.0.pc.in
plugins/clang/: Makefile.am  clang.plugin  gb-clang-plugin.c  ide-clang-service.c
plugins/clang-completion/: Makefile.am  clang-completion.plugin  ide-clang-completion-provider.c
plugins/clang-diagnostics/: Makefile.am  clang-diagnostics.plugin  ide-clang-diagnostic-provider.c  ide-clang-diagnostic-provider.h
plugins/clang-highlighter/: Makefile.am  clang-highlighter.plugin  ide-clang-highlighter.c  ide-clang-highlighter.h
plugins/clang-symbol-resolver/: Makefile.am  clang-symbol-resolver.plugin  ide-clang-symbol-resolver.c
plugins/cmake/: Makefile.am  cmake-plugin.c  cmake.plugin  configure.ac  ide-cmake-build-system.c  ide-cmake-build-system.h  ide-cmake-build-task.c  ide-cmake-build-task.h  ide-cmake-builder-step.c  ide-cmake-builder-step.h  ide-cmake-builder.c  ide-cmake-builder.h  ide-cmake-compile-commands-db.h  ide-cmake-compile-db.c  ide-cmake-compile-db.h
plugins/glade/: Makefile.am  gb-glade-addin.c  gb-glade-addin.h  gb-glade-panel.c  gb-glade-panel.h  gb-glade-panel.ui  gb-glade.gresource.xml  glade.plugin
src/: .gitignore  Makefile.am  Makefile.include  gb-action.c  gb-action.h  gb-animation.c  gb-animation.h  gb-application.c  gb-application.h  gb-compiler-clang.c  gb-compiler-clang.h  gb-compiler-js.c  gb-compiler-js.h  gb-compiler-result.c  gb-compiler-result.h  gb-compiler.c  gb-compiler.h  gb-debugger-gdb.c  gb-debugger-gdb.h  gb-debugger.c  gb-debugger.h  gb-docs-pane.c  gb-docs-pane.h  gb-docs-provider-devhelp.c  gb-docs-provider-devhelp.h  gb-docs-provider-gir.c  gb-docs-provider-gir.h  gb-docs-provider.c  gb-docs-provider.h  gb-file-filters.c  gb-file-filters.h  gb-language-c.c  gb-language-c.h  gb-language-formatter-c.c  gb-language-formatter-c.h  gb-language-formatter-js.c  gb-language-formatter-js.h  gb-language-formatter.c  gb-language-formatter.h  gb-language-js.c  (+96 more)
src/animation/: gb-animation.h
src/app/: gb-application.c  gb-application.h  gb-back-forward-list.c  gb-file-filters.h  gb-icon-theme.c  gb-icon-theme.h  gb-path.c  gb-path.h  gb-util.h
src/browser/: gb-tree-builder-gir.c  gb-tree-builder-gir.h  gb-tree-builder-group.c  gb-tree-builder-group.h  gb-tree-builder-project.c  gb-tree-builder-project.h  gb-tree-node-gir.c  gb-tree-node-gir.h  gb-tree-node-group.c  gb-tree-node-group.h  gb-tree-node-project.c  gb-tree-node-project.h  gb-tree-node.c  gb-tree-node.h  gb-tree.c  gb-tree.h
src/command/: gb-command-dbus.h  gb-command-stack.c  gb-command.c
src/commands/: gb-command-dbus.c  gb-command-stack.c  gb-command-stack.h  gb-command.c  gb-command.h
src/compiler/: gb-compiler-clang.h  gb-compiler-js.h  gb-compiler.c  gb-compiler.h
src/core/: gb-application-menu.ui  gb-application.c  gb-application.h  gb-dbus-daemon.c  gb-dbus-daemon.h  gb-service.c  gb-service.h  gb-subprocess-manager.c  gb-subprocess-manager.h
src/data/: gb-application.gresource.xml
src/dbus/: .gitignore  gb-dbus-typelib.c  gb-dbus-typelib.h  typelib-worker.xml
src/debugger/: gb-debugger-section.c  gb-debugger-section.h  gb-debugger.c  gb-debugger.h
src/designer/: gb-designer-section.c  gb-designer-section.h
src/dialogs/: gb-create-project-dialog.c  gb-create-project-dialog.h  gb-prefs-dialog.c  gb-prefs-dialog.h
src/docs/: gb-docs-pane.c  gb-docs-pane.h  gb-docs-provider-gir.h  gb-docs-provider.c  gb-docs-section.c  gb-docs-section.h  gb-docs-tab.c  gb-docs-tab.h
src/editor/: gb-editor-document.c  gb-editor-document.h  gb-editor-section.c  gb-editor-section.h  gb-editor-tab.c  gb-editor-tab.h  gb-source-document.c  gb-source-document.h  gb-source-overlay.c  gb-source-snippet-chunk.h  gb-source-snippet-completion-item.c  gb-source-snippet-completion-provider.c  gb-source-snippet-completion-provider.h  gb-source-snippet-context.c  gb-source-snippet.c  gb-source-snippet.h  gb-source-view.c  org.gnome.Builder.Editor.DocumentSettings.gschema.xml  org.gnome.builder.preferences.editor.gschema.xml  org.gnome.builder.preferences.editor.language.gschema.xml
src/git/: .gitignore  gb-git-section.c  gb-git-section.h  gb-git-service.c  gb-git-service.h  org.gnome.Builder.Services.Git.xml
src/language/: gb-language-c-completion-provider.c  gb-language-c-completion-provider.h  gb-language-c.h  gb-language-formatter-c.h  gb-language-formatter-js.c  gb-language-formatter.c  gb-language-formatter.h  gb-language-js.h  gb-language.c
src/log/: gb-log.c  gb-log.h
src/multiprocess/: gb-multiprocess-manager.c  gb-multiprocess-manager.h
src/nautilus/: nautilus-floating-bar.c
src/profiler/: gb-profiler-ltrace.c  gb-profiler-strace.c  gb-profiler-valgrind.c  gb-profiler.c  gb-profiler.h
src/project/: gb-project-file.c  gb-project-file.h  gb-project-format.c  gb-project-format.h  gb-project-group.c  gb-project-group.h  gb-project-info.c  gb-project-info.h  gb-project-item.c  gb-project-item.h  gb-project-service.c  gb-project-service.h  gb-project-target-c.c  gb-project-target-c.h  gb-project-target.c  gb-project-target.h  gb-project.c  gb-project.h
src/resources/: gnome-builder.gresource.xml
src/search/: fuzzy.c  fuzzy.h  gb-search-completion.c  gb-search-completion.h  gb-search-fuzzy.c  gb-search-fuzzy.h  gb-search-provider.c  gb-search-provider.h  highlight.c  highlight.h
src/snippets/: gb-source-snippet-context.h
src/source/: gb-source-diff.c  gb-source-gutter-renderer-compiler.h  gb-source-overlay.h  gb-source-pane.c  gb-source-pane.h  gb-source-snippet-chunk.c  gb-source-snippet-chunk.h  gb-source-snippet-completion-item.c  gb-source-snippet-completion-provider.c  gb-source-snippet-context.c  gb-source-snippet-context.h  gb-source-snippet-parser.c  gb-source-snippet.c  (+16 more)
tests/: .gitignore  Makefile.am  Makefile.include  test-back-forward-list.c  test-browser.c  test-editor.c  test-greeter.c  test-search-fuzzy.c  test-snippet-context.c  test-snippet-parser.c  test-symbol-browser.c  test.snippet
(+137 files in other folders)
